Fixes circle alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -942,7 +942,7 @@ footer > .download {
 }
 
 .graphs {
-  margin: 40px 0;
+  margin: 40px 0 40px -10px;
   height: 300px;
   width:100%;
 
